[package]
name = "Rust-Emb-BlinkyLights"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7"
microbit-v2 = "0.14"
embedded-hal = "1.0"
panic-halt = "0.2"

[[bin]]
name = "blinky"
path = "src/bin/blinky.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "buttonblink"
path = "src/bin/buttonblink.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "blinkyarray"
path = "src/bin/blinkyarray.rs"
test = false
doctest = false
bench = false